static/css/style.css
body{
    background: #ededed;
    font-family: 'Raleway';
}
.navbar{
    padding: 15px 30px;
    margin-bottom: 5px;
}
.brand-logo,.brand-logo:hover{
    font-size: 24px;
    color: #333333;
    border: 2px solid #333333;
    padding: 6px 10px;
    font-weight: 500;
    text-decoration: none;
    display:inline-block;margin-top:5px;
}
.nav-logo{
    height: 60px;
}
.backtohome{
    float:right;
    color: #333333;
}
.contactus{
    float:right;
    color: #333333;
    padding-right: 5px;
}
h1.main-logo{
    font-size: 6rem;
    display:block;
    color:#333333;
    font-weight: 600;
    margin-top:0;
}
a.home-button{
    padding: 15px;
    margin: 10px;
    border:2px solid #333333;
    color: #333333;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    text-decoration: none;
    width: 230px;
    height: 230px;
    vertical-align: top;
    display: inline-flex;
    justify-content: center;
    flex-direction: column;
}
a.home-button:hover{
    background: #333333;
    color:#FFFFFF;
}
    a.home-button .glyphicon{
        font-size: 5rem;
        display: block;
        margin-bottom: 10px;
    }
    a.home-button .text{
        font-size: 2rem;
        font-weight: 500;
        text-transform: uppercase;
        display:inline-block;
    }
    a.home-button .ml{
        margin-top:7px;
        padding-top:7px;
        border-top: 1px dotted #555555;
        font-size: 1.4rem;
        font-weight: bold;
        text-transform: uppercase;
        display:inline-block;
    }
p.home-info{
    font-size: 1.6rem;
    font-weight: 500;
    max-width: 800px;
    margin:30px auto 0;
}
form{
    width:96%;
    margin: 20px auto;
    max-width: 600px;
}
footer{
    margin: 40px 0;
}
.ml.small{
    font-size: 0.6em;
}
.footer-logo{
    height: 60px;
    margin: 15px;
}
@media screen and (max-width: 640px) {
    .navbar{
        padding: 4px 6px;
    }
    .brand-logo,.brand-logo:hover{
        font-size: 15px;
        padding: 3px 6px;
        margin-top: 0;
    }
    h1.main-logo{
        font-size: 3.5rem;
        margin-top:10px;
    }
    a.home-button .glyphicon{
        font-size: 3rem;
        margin-bottom: 15px;
    }
    a.home-button{
        display: inline-block;
        padding: 20px 10px;
        margin: 5px 10px;
        width: 80%;
        height: auto;
    }
    a.home-button .text{
        font-size: 2rem;
    }
    .nav-logo{
        height: 30px;
    }
    .footer-logo{
        height: 80px;
        display: block;
        margin: 15px auto;
    }
}

table {
    border-collapse: collapse;
    width: 100%;
}

td, th {
    border: 1px solid #cccccc;
    text-align: left;
    padding: 14px 8px;
}

tr:nth-child(even) {
    background-color: #E5E5E5;
}
tr:hover td{
    background-color: #dce9f1;
}

.static-page-box{
    background: #F5F5F5;
    margin-top:40px;
    padding:20px 20px 50px;
    border: 2px solid #CCCCCC;
}

.center {
    text-align: center;
}

.pagination {
    display: inline-block;
}

.pagination a {
    color: black;
    float: left;
    padding: 8px 16px;
    text-decoration: none;
    transition: background-color .3s;
    border: 1px solid #ddd;
    margin: 0 4px;
}

.pagination a.active {
    background-color: #1C608C;
    color: white;
    border: 1px solid #1C608C;
}

.pagination a:hover:not(.active) {background-color: #ddd;}

@media only screen and (max-width: 960px) {
    .col-xs-12 {
      display: flex;
      flex-direction: column-reverse;
    }
  }

